--- a/src/app/doors/door/door.component.html
+++ b/src/app/doors/door/door.component.html
@@ -1,1 +1,10 @@
-<p>door works!</p>
+<div class="container">
+    <p>id: {{door.id}}</p>
+    <p>name: {{door.name}}</p>
+    <p>width: {{door.width}}</p>
+    <p>height: {{door.height}}</p>
+    <button class="btn btn-sm btn-outline-primary" (click)='goDoors()'>Go back</button>
+</div>
+
+
+
