--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,9 @@
     <nav class="mr-md-3">
       <a class="p-2 text-dark" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="p-2 text-dark" routerLink="doors" routerLinkActive="active">Doors</a>
-      <a class="p-2 text-dark" routerLink="hardware" routerLinkActive="Active">Hardware</a>
+      <a class="p-2 text-dark" routerLink="hardwares" routerLinkActive="Active">Hardware</a>
+      <a class="p-2 text-dark" routerLink="users" routerLinkActive="Active">Users</a>
+      <a class="p-2 text-dark" routerLink="contacts" routerLinkActive="Active">Contacts</a>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
