--- a/src/app/doors/doors.component.html
+++ b/src/app/doors/doors.component.html
@@ -21,6 +21,9 @@
               </div>
             </div>
             <button class="btn btn-sm btn-outline-primary" (click)='goHardware()'>Go hardware </button>
-          </div>
+         </div>
         </div>
-      </main>
+        
+       <router-outlet></router-outlet>
+
+</main>
