--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
       <a class="p-2 text-dark" routerLink="hardwares" routerLinkActive="Active">Hardware</a>
       <a class="p-2 text-dark" routerLink="users" routerLinkActive="Active">Users</a>
       <a class="p-2 text-dark" routerLink="contacts" routerLinkActive="Active">Contacts</a>
+      <a class="p-2 text-dark" routerLink="server" routerLinkActive="Active">Server</a>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
