--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -4,11 +4,11 @@
     <form (ngSubmit)= "onSubmit(f)" #f="ngForm">
         <div class="form-group">
           <label for="formGroupExampleInput">User Name</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name" name='name' [(ngModel)] = "user.name" required>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name" name='name' ngModel required>
         </div>
         <div class="form-group">
           <label for="formGroupExampleInput2">Input id</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Id" name='id' [(ngModel)] = "user.id">
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Id" name='id' ngModel >
         </div>
         <button class="btn btn-primary" type="submit">Add User</button>
     </form> 
