bootstrap problem fix

--- a/src/app/server/server-instance/server-instance.component.html
+++ b/src/app/server/server-instance/server-instance.component.html
@@ -5,9 +5,7 @@
     </div>
     <div class="card-body">
       <h5 class="card-title">{{server.status}}</h5>
-      <button type="button" class="btn btn-primary" (click)="changeStatus('Active',serverId)">Set to Active</button>
-      <button type="button" class="btn btn-danger"  (click)="changeStatus('Inactive',serverId)">Set to Inactive</button>
-      <button type="button" class="btn btn-danger"  (click)="Delete(server.name)">Delete</button>
+      <button type="button" class="btn btn-success" >Edit</button>
     </div>
 </div>
 
