--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -18,8 +18,13 @@
 
 
     <hr>
-    <div class="container">
-        <app-server-instance></app-server-instance>
+    <div class="row">
+        <div class="col-sm-6">
+            <app-server-instance></app-server-instance>
+        </div>
+        <div class="col-sm-6">
+            <app-edit-server></app-edit-server>
+        </div>
     </div>
-    
+
 </div>
