--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -23,7 +23,7 @@
             <app-server-instance></app-server-instance>
         </div>
         <div class="col-sm-6">
-            <app-edit-server></app-edit-server>
+            <router-outlet></router-outlet>
         </div>
     </div>
 
