--- a/src/app/server/edit-server/edit-server.component.html
+++ b/src/app/server/edit-server/edit-server.component.html
@@ -6,7 +6,7 @@
       <h5 class="card-title"></h5>
       <button type="button" class="btn btn-primary" (click)="changeStatus('Active')">Set to Active</button>
       <button type="button" class="btn btn-danger"  (click)="changeStatus('Inactive')">Set to Inactive</button>
-      <button type="button" class="btn btn-danger"  (click)="Delete(server.name)">Delete</button>
+      <button type="button" class="btn btn-danger"  (click)="Delete()">Delete</button>
     </div>
 </div>
 
