--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -19,10 +19,10 @@
 
     <hr>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 serverPanel">
             <app-server-instance></app-server-instance>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 allowEditPanel">
             <router-outlet></router-outlet>
         </div>
     </div>
