--- a/src/app/server/server-instance/server-instance.component.html
+++ b/src/app/server/server-instance/server-instance.component.html
@@ -7,7 +7,7 @@
       <h5 class="card-title">{{server.status}}</h5>
       <button type="button" class="btn btn-success"
        [routerLink]= "['/server',server.name]" 
-       [queryParams]="{allowEdit: server.name === 'Pedro Hernandez'? '1' : '0'}">Edit</button>
+       [queryParams]="{allowEdit: server.name === 'Pedro'? '1' : '0'}">Edit</button>
     </div>
 </div>
 
