--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -11,6 +11,7 @@
           <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Id" name='id' ngModel >
         </div>
         <button class="btn btn-primary" type="submit">Add User</button>
+        <button class="btn btn-primary" type="button" (click)="reloadPage()">Reload Page</button>
     </form> 
 
     <div class="row mt-0">
